# web_email_collector

./: README.md  cli.py  config.py  crawler.py  extractor.py  pyproject.toml  saver.py  searcher.py
